apps/littlecupboard/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: littlecupboard
spec:
  selector:
    app: littlecupboard
  ports:
    - name: http
      port: 8080
      targetPort: http
